# pytokamap

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
examples/: convert_uda.py  convert_zarr.py  globals.json  uda.jinja  zarr.jinja
pytokamap/: __init__.py  api.py  mapper.py  mast.py  plugins.py  reader.py  transforms.py  types.py  writers.py
test/: conftest.py  test_api.py  test_mapper.py  test_plugins.py  test_transform.py  test_uda.py  test_writer.py
